css/myfood.scss
@mixin menu-background($name) {
	background-image: url("../img/#{$name}.svg");
	background-repeat: no-repeat;
	background-size: 55% 60%;
	background-position: 47.5% 30%;
}

div[data-role="footer"] {
	display: none;
}

div[data-role="page"], .ui-panel-content-wrap {
	height: 100%;
}

fieldset[data-role="controlgroup"] {
	margin-bottom: 75px;
}

/* Styles for menu */

.ui-panel-inner {
	padding: 0;
}

.slide-menu .link {
	height: 25%;
}

.link {
	position: relative;
	text-align: center;
	cursor: pointer;
}

.link:hover {
	background-color: #DDD;
}

.link span {
	position: relative;
	font-size: 1.1em;
}

.link.fridge {
	@include menu-background("eggs");
	background-size: 60% 80%;
}

.link.groceryList {
	@include menu-background("cart");
}

.link.mealPlanner {
	@include menu-background("calendar");
	background-position: 52.5% 30%;
}

.link.recipes {
	@include menu-background("pot");
	background-position: 50% 30%;
}

div.link.noBgImg {
	background-image: none;
}

input[type="checkbox"] {
	display: none;
}


/* Adjustments for left panel width */

$left-panel-width: 175px;
 
.ui-panel {
	width: $left-panel-width;
}
 
.ui-panel.ui-panel-closed {
	width: 0;
}
 
.ui-panel-position-left {
	left: -$left-panel-width;
}
 
.ui-panel-animate.ui-panel-position-left.ui-panel-display-overlay, .ui-panel-animate.ui-panel-position-left.ui-panel-display-push {
	-webkit-transform: translate3d(-$left-panel-width, 0, 0);
	-moz-transform: translate3d(-$left-panel-width, 0, 0);
	transform: translate3d(-$left-panel-width, 0, 0)
}
 
.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-open, .ui-panel-content-wrap-position-left.ui-panel-content-wrap-open, .ui-panel-dismiss-position-left.ui-panel-dismiss-open {
	left: $left-panel-width;
}
 
.ui-panel-animate.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-open.ui-panel-content-fixed-toolbar-display-reveal, .ui-panel-animate.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-open.ui-panel-content-fixed-toolbar-display-push, .ui-panel-animate.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open.ui-panel-content-wrap-display-reveal, .ui-panel-animate.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open.ui-panel-content-wrap-display-push {
	-webkit-transform: translate3d($left-panel-width, 0, 0);
	-moz-transform: translate3d($left-panel-width, 0, 0);
	transform: translate3d($left-panel-width, 0, 0)
}
 
.ui-panel-content-fixed-toolbar-position-right.ui-panel-content-fixed-toolbar-open, .ui-panel-content-wrap-position-right.ui-panel-content-wrap-open, .ui-panel-dismiss-position-right.ui-panel-dismiss-open {
	left: -$left-panel-width;
}
 
@media (min-width:55em) {
 
	.ui-responsive-panel.ui-page-panel-open .ui-panel-content-fixed-toolbar-display-push.ui-panel-content-fixed-toolbar-position-right, .ui-responsive-panel.ui-page-panel-open .ui-panel-content-fixed-toolbar-display-reveal.ui-panel-content-fixed-toolbar-position-right, .ui-responsive-panel.ui-page-panel-open .ui-panel-content-wrap-display-push.ui-panel-content-wrap-position-right, .ui-responsive-panel.ui-page-panel-open .ui-panel-content-wrap-display-reveal.ui-panel-content-wrap-position-right {
		margin-left: $left-panel-width
	}
}

